# em_zusammen

./: .gitignore  README.md  pyproject.toml  pyprojet.toml
.github/: CODEOWNERS
em/em.egg-info/: PKG-INFO  SOURCES.txt
em/notebooks/: 01_introduction_to_ibkr.ipynb
em/scripts/: load_historical_data.sh
em/source/: tools.py
em/source/em_zusammen.egg-info/: PKG-INFO  top_level.txt
notebooks/: 01_introduction_to_ibkr.ipynb  utils.py
source/: constant.py  tools.py  utils.py
