[project]
name = "em"
version = "0.1.0"
description = "EM"
authors = [
  { name="yirui", email="yiruijiang123@gmail.com" }
]
dependencies = [
  "pandas",
  "numpy",
  "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["source"]
package-dir = {"" = "em"}